--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="css/small-business.css" rel="stylesheet">
 
+  <link rel="icon" href="favicon/xml3.ico" type="image/gif" sizes="16x16">
+
 </head>
 
 <body>
