--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
-            <a href="#portfolioModal1" class="btn btn-primary btn-sm">More Info</a>
+            <a href="#portfolioModal1" data-toggle="modal" class="btn btn-primary btn-sm">More Info</a>
           </div>
         </div>
       </div>
