--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2 class="card-title">Card One</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
-          <div class="portfolio-item">
+          <div class="card-footer">
             <a href="#portfolioModal1" data-toggle="modal" class="btn btn-primary btn-sm">More Info</a>
           </div>
         </div>
