--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- Content Row -->
     <div class="row">
-      <div class="col-lg-4 col-sm-6 mb-4">
+      <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Card One</h2>
