--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <meta name="author" content="">
 
   <title>XML3 Portfolio</title>
+  <link rel="icon" href="favicon/xml3.ico" type="image/x-icon">
 
+  <!-- Font Awesome Icons -->
+  <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/small-business.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet" />
 
-  <link rel="icon" href="favicon/xml3.ico" type="image/gif" sizes="16x16">
+
 
 </head>
 
