--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>XML3 Portfolio</title>
+  <title>XML3 Company Portfolio</title>
   <link rel="icon" href="favicon/xml3.ico" type="image/x-icon">
 
   <!-- Font Awesome Icons -->
