--- a/index.html
+++ b/index.html
@@ -81,16 +81,19 @@
 
     <!-- Content Row -->
     <div class="row">
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Card On</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+      <div class="col-lg-4 col-sm-6 mb-4">
+          <div class="portfolio-item">
+              <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                  <div class="portfolio-hover">
+                      <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+              </a>
+              <div class="portfolio-caption">
+                  <div class="portfolio-caption-heading">Card One</div>
+                  <div class="portfolio-caption-subheading text-muted">...</div>
+              </div>
           </div>
-          <div class="card-footer">
-            <a href="#portfolioModal1" data-toggle="modal" class="btn btn-primary btn-sm">More Info</a>
-          </div>
-        </div>
       </div>
       <!-- /.col-md-4 -->
       <div class="col-md-4 mb-5">
