--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <section class="page-section bg-light" id="portfolio">
         <div class="container">
               <div class="row">
+                <!-- Card One -->
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
@@ -98,32 +99,38 @@
                         </div>
                     </div>
                 </div>
-                <!-- /.col-md-4 -->
-                <div class="col-md-4 mb-5">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h2 class="card-title">Card Two</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                <!-- Card Two -->
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Card Two</div>
+                            <div class="portfolio-caption-subheading text-muted">...</div>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                      <a href="#portfolioModal2" data-toggle="modal" class="btn btn-primary btn-sm">More Info</a>
-                    </div>
-                  </div>
                 </div>
-                <!-- /.col-md-4 -->
-                <div class="col-md-4 mb-5">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h2 class="card-title">Card Three</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                <!-- Card Three -->
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Card Three</div>
+                            <div class="portfolio-caption-subheading text-muted">...</div>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                      <a href="#portfolioModal3" data-toggle="modal" class="btn btn-primary btn-sm">More Info</a>
-                    </div>
-                  </div>
                 </div>
-                <!-- /.col-md-4 -->
 
+              <!-- /Cards -->
               </div>
             </div>
         </section>
