--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">XML3</a> <!-- Webpage Title -->
+      <img class="logo" src="img\xml3.ico"> <!-- Webpage Title -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,6 +55,14 @@
 
 
 
+<!-- Team-->
+<section class="page-section bg-light" id="team">
+    <div class="container">
+        <div class="text-center">
+            <h1 class="section-heading text-uppercase">Our Company Goals</h1>
+        </div>
+     
+</section>
 
 <!-- Team-->
 <section class="page-section bg-light" id="team">
@@ -98,7 +106,7 @@
             <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
         </div>
     </div>
-</section>s
+</section>
 
 
   <!-- /.container -->
