--- a/about.html
+++ b/about.html
@@ -36,7 +36,6 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home
-              <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
@@ -66,7 +65,7 @@
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fas fa-money fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-money fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="my-3">Affordable Pricing</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
