--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
+            <span class="sr-only">(current)</span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Services</a>
@@ -65,9 +66,9 @@
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-money fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="my-3">Affordable Pricing</h4>
+                <h4 class="my-3">Database Design</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
