--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <section class="page-section" id="services">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">Our company servises</h2>
+            <h2 class="section-heading text-uppercase">Our company services</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
         <div class="row text-center">
