--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Contact us Via Our company email at<a href="XML3@gmail.com">XML3@gmail.com</a></p></div>
         </div>
     </div>
 </section>
