--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="pages/about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Services</a>
