--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>XML3 Company Portfolio</title>
-  <link rel="icon" href="favicon/xml3.ico" type="image/x-icon">
+  <link rel="icon" href="favicon/xml3.ico" type="../image/x-icon">
 
   <!-- Font Awesome Icons -->
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -17,8 +17,8 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/small-business.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="../css/small-business.css" rel="stylesheet">
+  <link href="../css/styles.css" rel="stylesheet">
 
 
 
