--- a/index.html
+++ b/index.html
@@ -42,13 +42,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="pages/about.html">About & Contact</a>
           </li>
         </ul>
       </div>
