--- a/pages/about.html
+++ b/pages/about.html
@@ -105,7 +105,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="../img/placeholder.jpg" alt="" />
+                    <img class="mx-auto rounded-circle" src="../PFPs/Jordi.png" alt="" />
                     <h4>Franco Folgarait</h4>
                     <p class="text-muted">Web Developer</p>
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
