--- a/pages/about.html
+++ b/pages/about.html
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="../PFPs/Jordi.png" alt="" />
+                    <img class="mx-auto rounded-circle" src="../PFPs/Jordi.jpg" alt="" />
                     <h4>Jorge Romero</h4>
                     <p class="text-muted">Graphic Designer/ Web Designer</p>
                     <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
