--- a/pages/about.html
+++ b/pages/about.html
@@ -9,12 +9,12 @@
   <meta name="author" content="">
 
   <title>XML3 Company Portfolio</title>
-  <link rel="icon" href="favicon/xml3.ico" type="../image/x-icon">
+  <link rel="icon" href="../favicon/xml3.ico" type="../image/x-icon">
 
   <!-- Font Awesome Icons -->
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="../css/small-business.css" rel="stylesheet">
@@ -28,7 +28,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <img class="logo" src="../img\xml3.ico"> <!-- Webpage Title -->
+      <img class="logo" src="../img/xml3.ico"> <!-- Webpage Title -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -142,8 +142,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
