--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link_About_&_Contact" href="pages/about.html">About & Contact</a> <!-- Rename class to Nav-link About & Contact so that font size could be changed -->
+            <a class="nav-link_About_Contact" href="pages/about.html">About & Contact</a> <!-- Rename class to Nav-link About & Contact so that font size could be changed -->
           </li>
         </ul>
       </div>
