--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link_Home" href="#">Home <!-- Rename class to Nav-link home so that font size could be changed -->
+            <a class="nav-link_Home" href="#">Home</a> <!-- Rename class to Nav-link home so that font size could be changed -->
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link_About_Contact" href="pages/about.html">About & Contact</a> <!-- Rename class to Nav-link About & Contact so that font size could be changed -->
+            <a class="nav-link_About_Contact" href="pages/about.html"> About & Contact</a> <!-- Rename class to Nav-link About & Contact so that font size could be changed -->
           </li>
         </ul>
       </div>
