--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="col-lg-5">
         <h1 class="font-weight-light">Welcome to XML3</h1>
         <p>Your number one choice for Webpage Designing and Database integration in Belize. XML3 is a Trio of upcoming web designers who work relentlessly to provide the best service and quality to our clients. We Tackle Jobs big or small and do them to the absolute best. Let’s Make your Business have a one of a kind website that fits your style and liking today by clicking on the following link</p>
-        <a class="btn btn-primary" href="#">Call to Action!</a>
+        <a class="btn btn-primary" href="#">Lets get Started!</a>
       </div>
       <!-- /.col-md-4 -->
     </div>
