--- a/pages/about.html
+++ b/pages/about.html
@@ -62,7 +62,7 @@
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="my-3">*Database Integration*</h4>
+                <h4 class="my-3">Database Integration</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
