--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Our company Goals</h2>
-            <h3 class="section-subheading text-muted">Imagination turns to innovation.</h3>
+            <h3 class="section-subheading text-muted">Your creative web development partner.</h3>
         </div>
         <div class="row text-center">
             <div class="col-md-4">
