--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- /.col-lg-8 -->
       <div class="col-lg-5">
         <h1 class="font-weight-light">Welcome to XML3</h1>
-        <p>Your number one choice for Webpage Designing and Database integration in Belize. XML3 is a Trio of upcoming web designers who work relentlessly to provide the best service and quality to our clients. We Tackle Jobs big or small and do them to the absolute best. Let’s Make your Business have a one of a kind website that fits your style and liking today by clicking on the following link</p>
+        <p>Your number one choice for Webpage Designing and Database integration in Belize. XML3 is a trio of upcoming web designers who work relentlessly to provide the best quality and service to our clients. We tackle jobs big and small, and do them to the best of our ability. Let’s make your business have a one of a kind website that fits your style and liking today by clicking on the following link!</p>
         <a class="btn btn-primary" href="#">Lets get Started!</a>
       </div>
       <!-- /.col-md-4 -->
