--- a/pages/about.html
+++ b/pages/about.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Contact us Via Our company email at<a href="XML3@gmail.com">XML3@gmail.com</a></p></div>
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Contact us via our company email at: <a href="mailto:xml3@googlegroups.com">XML3</a></p></div>
         </div>
     </div>
 </section>
