--- a/pages/about.html
+++ b/pages/about.html
@@ -97,10 +97,8 @@
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="../PFPs/Jordi.jpg" alt="" />
                     <h4>Jorge Romero</h4>
-                    <p class="text-muted">Graphic Designer/ Web Designer</p>
-                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    <p class="text-muted">Graphic Designer/Web Designer/Animator</p>
+                    <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/Jordi_Sakuta"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="col-lg-4">
