--- a/pages/about.html
+++ b/pages/about.html
@@ -98,7 +98,7 @@
                     <img class="mx-auto rounded-circle" src="../PFPs/Jordi.jpg" alt="" />
                     <h4>Jorge Romero</h4>
                     <p class="text-muted">Graphic Designer/Web Designer/Animator</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/Jordi_Sakuta"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/Jordi_Sakuta" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="col-lg-4">
