--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <img class="logo" src="img\xml3.ico"> <!-- Webpage Title -->
+      <img class="logo" src="img\navbarlogo.ico"> <!-- Webpage Title -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -85,7 +85,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="img/xml3.png" alt="" />
+                            <img class="img-fluid d-block mx-auto" src="img/xml3logo2.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Our Company Website</div>
@@ -142,7 +142,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">Our Company Website</h2>
-                                <img class="img-fluid d-block mx-auto" src="img/xml3.png" alt="" />
+                                <img class="img-fluid d-block mx-auto" src="img/xml3.png=" alt="" />
                                 <p class="text-paragraph">Our Company website is one of the first of many Websites we as a company ever work on. This website give you a insite on what we are as a company. </p>
                                 <ul class="list-inline text-paragraph">
                                     <li>Date: August 2020</li>
