--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <img class="logo" src="img\navbarlogo.ico"> <!-- Webpage Title -->
+      <img class="logo" src="img/navbarlogo.ico"> <!-- Webpage Title -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
