--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Heading Row -->
     <div class="row align-items-center my-5">
       <div class="col-lg-7">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="img/900x400.png" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="img/main_pic.jpeg" alt="img/900x400.png">
       </div>
       <!-- /.col-lg-8 -->
       <div class="col-lg-5">
