--- a/index.html
+++ b/index.html
@@ -70,7 +70,19 @@
     <!-- Call to Action Well -->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">The tighter it is, the bloodier it gets - The Loli Store</p>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <p class="text-white m-0">We strive to code to the best of our ability!</p>
+            </div>
+            <div class="carousel-item">
+              <p class="text-white m-0">Coding is practically our second nature!</p>
+            </div>
+            <div class="carousel-item">
+              <p class="text-white m-0">The tighter it is, the bloodier it gets - The Loli Store</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -142,7 +154,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">Our Company Website</h2>
-                                <img class="img-fluid d-block mx-auto" src="img/xml3.png=" alt="" />
+                                <img class="img-fluid d-block mx-auto" src="img/xml3.png" alt="" />
                                 <p class="text-paragraph">Our Company website is one of the first of many Websites we as a company ever work on. This website give you a insite on what we are as a company. </p>
                                 <ul class="list-inline text-paragraph">
                                     <li>Date: August 2020</li>
