--- a/pages/about.html
+++ b/pages/about.html
@@ -97,7 +97,7 @@
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="../PFPs/Jordi.jpg" alt="" />
                     <h4>Jorge Romero</h4>
-                    <p class="text-muted">Graphic Designer/Web Designer/Animator</p>
+                    <p class="text-muted">Graphic Designer/Web Designer</p>
                     <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/Jordi_Sakuta" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
