--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     gtag('config', 'UA-175206997-1');
   </script>
-
+  <!-- Google Analytics /-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
