--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">Our Company Website</h2>
-                                <img class="img-fluid d-block mx-auto" src="img/xml3.png" alt="" />
+                                <img class="img-fluid d-block mx-auto" src="img/xml3.ico" alt="" />
                                 <p class="text-paragraph">Our Company website is one of the first of many Websites we as a company ever work on. This website give you a insite on what we are as a company. </p>
                                 <ul class="list-inline text-paragraph">
                                     <li>Date: August 2020</li>
