--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Our Company Website</div>
-                            <div class="portfolio-caption-subheading text-muted">...</div>
+                            <div class="portfolio-caption-subheading text-muted">The home of XML3</div>
                         </div>
                     </div>
                 </div>
