--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid d-block mx-auto" src="img/xml3logo2.jpg" alt="" />
+                            <img class="img-fluid d-block mx-auto" src="img/xml3.ico" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Our Company Website</div>
