--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <p class="text-white m-0">Coding is practically our second nature!</p>
             </div>
             <div class="carousel-item">
-              <p class="text-white m-0">The tighter it is, the bloodier it gets - The Loli Store</p>
+              <p class="text-white m-0">Victor is a pedo loli loving fuck</p>
             </div>
           </div>
         </div>
