commit on master

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <p class="text-white m-0">We strive to code to the best of our ability!</p>
             </div>
             <div class="carousel-item">
-              <p class="text-white m-0">Coding is practically our second nature!</p>
+              <p class="text-white m-0">"fucking loli is practically our second nature!"-Victor</p>
             </div>
             <div class="carousel-item">
               <p class="text-white m-0">Victor is a pedo loli loving fuck</p>
