--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 		</div>
 	</nav>
 	<!-- END nav -->
-	
+
+	<!-- Intro Section -->
 	<section class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -59,6 +60,7 @@
 		</div>
 	</section>
 
+<!-- What we offer Section -->
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-services-2">
 		<div class="container">
 			<div class="row no-gutters d-flex">
@@ -66,26 +68,26 @@
 					<div class="media block-6 services d-flex">
 						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-095-responsive-webpage"></span></div>
 						<div class="media-body pl-4">
-							<h3 class="heading mb-3">Quality Construction</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+							<h3 class="heading mb-3">Responsive Design</h3>
+							<p>Ah yes, why hello there.</p>
 						</div>
 					</div>      
 				</div>
 				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services services-2 d-flex">
-						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-worker-1"></span></div>
+						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-072-scroll-bar"></span></div>
 						<div class="media-body pl-4">
-							<h3 class="heading mb-3">Professional Liability</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+							<h3 class="heading mb-3">Step-by-Step Reporting</h3>
+							<p>The universe is an illusion.</p>
 						</div>
 					</div>      
 				</div>
 				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services d-flex">
-						<div class="icon justify-content-center align-items-center d-flex"><span class=""></span></div>
+						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-082-hierarchy-structure"></span></div>
 						<div class="media-body pl-4">
-							<h3 class="heading mb-3">Dedicated To Our Clients</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+							<h3 class="heading mb-3">Quality Design</h3>
+							<p>I don't know what else to say.</p>
 						</div>
 					</div>      
 				</div>
