--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 			<div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
 				<div class="col-lg-6 ftco-animate">
 					<div class="mt-5">
-						<h1 class="mb-4">We Build <br>Great Projects</h1>
-						<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
-						<p><a href="#" class="btn btn-primary">Our Services</a> <a href="#" class="btn btn-white" data-toggle="modal" data-target="#exampleModalCenter">Request A Quote</a></p>
+						<h1 class="mb-4">Welcome to <br>XML3</h1>
+						<p class="mb-4">We can make creating a tech related project easy.</p>
+						<p><a href="#" class="btn btn-primary">Our Services</a></p>
 					</div>
 				</div>
 			</div>
@@ -68,8 +68,8 @@
 					<div class="media block-6 services d-flex">
 						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-095-responsive-webpage"></span></div>
 						<div class="media-body pl-4">
-							<h3 class="heading mb-3">Responsive Design</h3>
-							<p>Ah yes, why hello there.</p>
+							<h3 class="heading mb-3">Responsive Design&nbsp;</h3>
+							<p>Our websites are made to be interactive for users and easily interchangable between mobile and desktop versions.</p>
 						</div>
 					</div>      
 				</div>
@@ -77,8 +77,8 @@
 					<div class="media block-6 services services-2 d-flex">
 						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-072-scroll-bar"></span></div>
 						<div class="media-body pl-4">
-							<h3 class="heading mb-3">Step-by-Step Reporting</h3>
-							<p>The universe is an illusion.</p>
+							<h3 class="heading mb-3">Step-by-Step Reports</h3>
+							<p>As we build the website, we have our customer up to date with the process so that they know what is going throughout the entire development of the project.</p>
 						</div>
 					</div>      
 				</div>
@@ -86,8 +86,8 @@
 					<div class="media block-6 services d-flex">
 						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-082-hierarchy-structure"></span></div>
 						<div class="media-body pl-4">
-							<h3 class="heading mb-3">Quality Design</h3>
-							<p>I don't know what else to say.</p>
+							<h3 class="heading mb-3">Modern Quality Design</h3>
+							<p>All the websites we build are of quality and up to date with the current year's standards. As well as having properly structured code so that anybody can maintain it.</p>
 						</div>
 					</div>      
 				</div>
