Transpanacy to background to full solid bacground

--- a/index.html
+++ b/index.html
@@ -23,24 +23,27 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
-		<div class="container d-flex align-items-center">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="fa fa-bars"></span> Menu
-			</button>
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-					<li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	<div id="page-top">
+	<nav  class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" > 
+		<div class="container ">
+			<button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				Menu
+				<i class="fas fa-bars"></i>
+					</button>
+			<div class="collapse navbar-collapse"  id="navbarResponsive">
+				<ul class="navbar-nav text-uppercase mr-auto">
+					<li class="nav-item "><a href="index.html" class="nav-link js-scroll-trigger">Home</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link js-scroll-trigger">About</a></li>
+					<li class="nav-item"><a href="services.html" class="nav-link js-scroll-trigger">Services</a></li>
+					<li class="nav-item"><a href="project.html" class="nav-link js-scroll-trigger">Projects</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link js-scroll-trigger">Contact</a></li>
 				</ul>
-				<a class="navbar-brand d-flex align-items-center" href="index.html">
+				<a class="navbar-brand d-flex align-items-center" class="nav-link js-scroll-trigger" href="index.html">
 					<img class="logo"src="img/NewLogo.png" >
 				</a>
 			</div>
 		</div>
+	</div>
 	</nav>
 	<!-- END nav -->
 
@@ -612,6 +615,8 @@
 		<script src="js/scrollax.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 		<script src="js/google-map.js"></script>
+		<script src="js/agency.min.js"></script>
+  
 		
 		<script src="js/main.js"></script>
 		
