--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon3.png">
-	
+
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/animate.css">
-	
+
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
 	<link rel="stylesheet" href="css/jquery.timepicker.css">
-	
+
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div id="page-top">
-	<nav  class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" > 
+	<nav  class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" >
 		<div class="container ">
 			<button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				Menu
@@ -74,7 +74,7 @@
 							<h3 class="heading mb-3">Responsive Design&nbsp;</h3>
 							<p>Our websites are made to be interactive for users and easily interchangable between mobile and desktop versions.</p>
 						</div>
-					</div>      
+					</div>
 				</div>
 				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services services-2 d-flex">
@@ -83,7 +83,7 @@
 							<h3 class="heading mb-3">Step-by-Step Reports</h3>
 							<p>As we build the website, we have our customer up to date with the process so that they know what is going throughout the entire development of the project.</p>
 						</div>
-					</div>      
+					</div>
 				</div>
 				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services d-flex">
@@ -92,7 +92,7 @@
 							<h3 class="heading mb-3">Modern Quality Design</h3>
 							<p>All the websites we build are of quality and up to date with the current year's standards. As well as having properly structured code so that anybody can maintain it.</p>
 						</div>
-					</div>      
+					</div>
 				</div>
 			</div>
 		</div>
@@ -109,18 +109,18 @@
 				<div class="col-md-6 py-5 pl-md-5">
 					<div class="row justify-content-center mb-4 pt-md-4">
 						<div class="col-md-12 heading-section ftco-animate">
-							<span class="subheading">Welcome to Wilcon</span>
-							<h2 class="mb-4">Wilcon A Construction Company</h2>
+							<span class="subheading">Welcome to XML3</span>
+							<h2 class="mb-4">We can make creating a tech related project easy.</h2>
 							<div class="d-flex about">
 								<div class="icon"><span class="flaticon-hammer"></span></div>
-								<h3>We're in this business since 1975 and We provide the best insdustrial services</h3>
+								<h3>Making your technological dreams come through since 2020</h3>
 							</div>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<div class="d-flex video-image align-items-center mt-md-4">
 								<a href="#" class="video img d-flex align-items-center justify-content-center" style="background-image: url(images/about-2.jpg);">
 									<span class="fa fa-play-circle"></span>
 								</a>
-								<h4 class="ml-4">This is how we work on our clients, Watch video</h4>
+								<h4 class="ml-4">This is how we work on our clients projects, Watch video</h4>
 							</div>
 						</div>
 					</div>
@@ -532,7 +532,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 aside-stretch py-3">
-						
+
 						<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
@@ -541,7 +541,7 @@
 				</div>
 			</div>
 		</footer>
-		
+
 		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content">
@@ -616,9 +616,9 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 		<script src="js/google-map.js"></script>
 		<script src="js/agency.min.js"></script>
-  
-		
+
+
 		<script src="js/main.js"></script>
-		
+
 	</body>
 	</html>
