--- a/index.html
+++ b/index.html
@@ -128,21 +128,42 @@
 			</div>
 		</div>
 	</section>
-
-	<section class="ftco-intro">
+<!-- our info -->
+	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-services-2">
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-12 text-center">
-					<div class="img"  style="background-image: url(images/bg_2.jpg);">
-						<div class="overlay"></div>
-						<h2>Providing Personalized and High Quality Services</h2>
-						<p>We can manage your dream building A small river named Duden flows by their place</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary px-4 py-3">Request A Quote</a></p>
+			<div class="row no-gutters d-flex">
+				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services d-flex">
+						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-095-responsive-webpage"></span></div>
+						<div class="media-body pl-4">
+							<h3 class="heading mb-3">Daniel Garcia&nbsp;</h3>
+							<p>Programmer </p>
+							<p>Email: TBD.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services services-2 d-flex">
+						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-072-scroll-bar"></span></div>
+						<div class="media-body pl-4">
+							<h3 class="heading mb-3">Step-by-Step Reports</h3>
+							<p>As we build the website, we have our customer up to date with the process so that they know what is going throughout the entire development of the project.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services d-flex">
+						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-082-hierarchy-structure"></span></div>
+						<div class="media-body pl-4">
+							<h3 class="heading mb-3">Modern Quality Design</h3>
+							<p>All the websites we build are of quality and up to date with the current year's standards. As well as having properly structured code so that anybody can maintain it.</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
 	<section class="ftco-section bg-half-light">
 		<div class="container">
