IM a dumbass(forgot to link the Script)

--- a/project.html
+++ b/project.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Wilcon - Free Bootstrap 4 Template by Colorlib</title>
+	<title>XML3</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+	<link rel="icon" href="img/favicon3.png">
+
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/animate.css">
-	
+
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
 	<link rel="stylesheet" href="css/jquery.timepicker.css">
-	
+
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="page-top">
-	<nav  class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" > 
+<div id="page-top">
+	<nav  class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" >
 		<div class="container ">
 			<button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				Menu
@@ -309,6 +310,7 @@
 		<script src="js/scrollax.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 		<script src="js/google-map.js"></script>
+		<script src="js/agency.min.js"></script>
 		
 		<script src="js/main.js"></script>
 		
