fixing services pages

--- a/services.html
+++ b/services.html
@@ -69,33 +69,33 @@
  <div class="row">
    <div class="col-md-4">
     <div class="services-wrap ftco-animate">
-     <div class="img" style="background-image: url(images/services-1.jpg);"></div>
+     <div class="img" style="background-image: url(images/website.png);"></div>
      <div class="text">
       <div class="icon"><span class="flaticon-architect"></span></div>
-      <h2>Architecture</h2>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+      <h2>Web Design/Web Development</h2>
+      <p>We offer web design and Web development at a resonnable and affordable cost</p>
       <a href="#" class="btn-custom">Read more</a>
     </div>
   </div>
 </div>
 <div class="col-md-4">
   <div class="services-wrap ftco-animate">
-   <div class="img" style="background-image: url(images/services-2.jpg);"></div>
+   <div class="img" style="background-image: url(images/services-2.png);"></div>
    <div class="text">
     <div class="icon"><span class="flaticon-worker"></span></div>
-    <h2>Renovation</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h2>Database Management</h2>
+    <p>We offer proffesional help in setting up your Database for your buisness so it can be safe and secure for your company and customers</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
 </div>
 <div class="col-md-4">
   <div class="services-wrap ftco-animate">
-   <div class="img" style="background-image: url(images/services-3.jpg);"></div>
+   <div class="img" style="background-image: url(images/Vid.png);"></div>
    <div class="text">
     <div class="icon"><span class="flaticon-hammer"></span></div>
-    <h2>Construction</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h2>Video Editing</h2>
+    <p>We also offer video Editing services to help out our customers if they need help with a video.</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
@@ -103,35 +103,15 @@
 
 <div class="col-md-4">
   <div class="services-wrap ftco-animate">
-   <div class="img" style="background-image: url(images/services-4.jpg);"></div>
+   <div class="img" style="background-image: url(images/NewLogo.png);"></div>
    <div class="text">
     <div class="icon"><span class="flaticon-architect"></span></div>
-    <h2>Interior &amp; Exterior</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h2>Logo design </h2>
+    <p>We also offer logo design so you that is very professionally done.</p>
     <a href="#" class="btn-custom">Read more</a>
   </div>
 </div>
 </div>
-<div class="col-md-4">
-  <div class="services-wrap ftco-animate">
-   <div class="img" style="background-image: url(images/services-5.jpg);"></div>
-   <div class="text">
-    <div class="icon"><span class="flaticon-worker"></span></div>
-    <h2>Chemical Research</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <a href="#" class="btn-custom">Read more</a>
-  </div>
-</div>
-</div>
-<div class="col-md-4">
-  <div class="services-wrap ftco-animate">
-   <div class="img" style="background-image: url(images/services-6.jpg);"></div>
-   <div class="text">
-    <div class="icon"><span class="flaticon-hammer"></span></div>
-    <h2>Petroleum &amp; Gas</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <a href="#" class="btn-custom">Read more</a>
-  </div>
 </div>
 </div>
 </div>
